@@ -127,10 +127,10 @@ public static void main(String[] args)
 		}
 	
 	} catch (MissingParameterException e) {
-		System.err.println(e.getMessage());
+		System.err.println(e+"");
 		System.exit(1);
 	} catch (IllegalParameterException e) {
-		System.err.println(e.getMessage());
+		System.err.println(e+"");
 		System.exit(1);
 	}
 
